--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.data.rest.base-path=/api
+spring.thymeleaf.prefix=classpath:/static/
+spring.datasource.url=jdbc:mysql://localhost:3306/carserviceapp
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
